# 2BSM-ScannerS-with-Lilith3

./: CMakeLists.txt  CONTRIBUTING.md  Copy_of_Welcome_to_Colaboratory.ipynb  LICENSE  README.md
Lilith3/: README.md
cmake/: DefaultBuildType.cmake  FindMicrOMEGAs.cmake
data/: info.md
doc/: Eigen-unsupported.doxytags  Eigen.doxytags
example_input/: C2HDM_FL.ini  C2HDM_LS.ini  C2HDM_T1.ini  C2HDM_T2.ini  CPVDM.ini  CxSMBroken.ini  CxSMDark.ini  N2HDMBroken_T2.ini  N2HDMDarkD.ini  N2HDMDarkSD.ini  N2HDMDarkS_T1.ini  R2HDM_FL.ini  R2HDM_LS.ini  R2HDM_T1.ini  R2HDM_T2.ini  TRSMBroken.ini
include/ScannerS/: Constants.hpp  Core.hpp  DataMap.hpp  Output.hpp  Setup.hpp  Utilities.hpp  config.h.in
include/ScannerS/Constraints/: AbsoluteStability.hpp  BFB.hpp  BPhysics.hpp  Constraint.hpp  DarkMatter.hpp  EWPT.hpp  ElectronEDM.hpp  Higgs.hpp  STU.hpp  Unitarity.hpp  VacStab.hpp
include/ScannerS/Interfaces/: HiggsBoundsSignals.hpp
include/ScannerS/Interfaces/MicrOMEGAs/: MicromegasInterface.hpp
include/ScannerS/Models/: C2HDM.hpp  CPVDM.hpp  CxSM.hpp  CxSMBroken.hpp  CxSMDark.hpp  Models.hpp  N2HDM.hpp  N2HDMBroken.hpp  N2HDMDarkD.hpp  N2HDMDarkS.hpp  N2HDMDarkSD.hpp  R2HDM.hpp  TRSM.hpp  TRSMBroken.hpp  TRSMDarkX.hpp  TwoHDM.hpp
include/ScannerS/Tools/: C2HEDM.hpp  ParameterReader.hpp  ScalarWidths.hpp  Spline.hpp  SushiTables.hpp
src/: CMakeLists.txt  DataMap.cpp  ScannerS_C2HDM.cpp  ScannerS_CPVDM.cpp  ScannerS_CxSMBroken.cpp  ScannerS_CxSMDark.cpp  ScannerS_N2HDMBroken.cpp  ScannerS_N2HDMDarkD.cpp  ScannerS_N2HDMDarkS.cpp  ScannerS_N2HDMDarkSD.cpp  ScannerS_R2HDM.cpp  ScannerS_TRSMBroken.cpp  Setup.cpp  Utilities.cpp
src/Constraints/: AbsoluteStability.cpp  BFB.cpp  BPhysics.cpp  Constraint.cpp  DarkMatter.cpp  EWPT.cpp  Higgs.cpp  STU.cpp  Unitarity.cpp  VacStab.cpp
src/Interfaces/: CMakeLists.txt  HiggsBoundsSignals.cpp
src/Interfaces/MicrOMEGAs/: CMakeLists.txt  MOModelInterface.c.in  MOModelInterface.h.in  MicromegasInterface.cpp
src/Interfaces/MicrOMEGAs/Models/CPVDM/models/: extlib1.mdl  func1.mdl  lgrng1.mdl  prtcls1.mdl  vars1.mdl
src/Interfaces/MicrOMEGAs/Models/DCxSM/models/: func1.mdl  lgrng1.mdl  prtcls1.mdl  vars1.mdl
src/Interfaces/MicrOMEGAs/Models/N2HDMDarkD/models/: func1.mdl  lgrng1.mdl  prtcls1.mdl  vars1.mdl
src/Interfaces/MicrOMEGAs/Models/N2HDMDarkSD/models/: func1.mdl  lgrng1.mdl  prtcls1.mdl  vars1.mdl
src/Interfaces/MicrOMEGAs/Models/N2HDMDarkS_T1/models/: func1.mdl  lgrng1.mdl  prtcls1.mdl  vars1.mdl
tests/: CMakeLists.txt  T_C2HDMGenerate.cpp  T_C2HDMTheo.cpp  T_CPVDMGenerate.cpp  T_ChargedHiggsCxn.cpp  T_CxSM.cpp  T_DataMap.cpp  T_EDM.cpp  T_HiggsBoundsSignals.cpp  T_MixMat.cpp  T_N2HDMB_Generate.cpp  T_N2HDMB_Props.cpp  T_N2HDMDD_Generate.cpp  T_N2HDMDS_Generate.cpp  T_N2HDMTheory.cpp  T_R2HDMGenerate.cpp  T_R2HDM_Props.cpp  T_STU.cpp  T_SushiTables.cpp  T_TRSM.cpp  functionalTest.cmake
tools/: PerturbativeUnitarity.m
